<resources>
    <string name="app_name">Fitness Friend</string>
    <string name="hello_world">Hello World!</string>
    <string name="name">Name</string>
    <string name="say_hi">Say Hi!</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="newAccount">Don\'t have an account? Create one now!</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="addFood">Add Food</string>
    <string name="searchForFood">Search for food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectMeal">Select meal</string>
    <string name="weight">Weight in kgs (e.g. 70)</string>
    <string name="height">Height in meters (e.g. 1.80)</string>
    <string name="save">Save</string>
    <string name="calorieGoal">Calories goal in kcals (e.g. 1500)</string>
    <string name="today_s_intake">Today\'s intake:</string>
    <string name="goalIntake">Target intake:</string>
</resources>