<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:textAlignment="center"
                android:layout_width="match_parent"/>

            <TextView
                android:id="@+id/calorieIntake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/date"
                android:padding="10dp"
                android:text="@string/calorie_intake"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addFoodBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/date"
                android:layout_margin="10dp"
                android:text="@string/addFood"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/calorieIntake"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/breakfastText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/breakfast"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/breakfast"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lunchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lunch"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lunch"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dinnerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dinner"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/snacks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dinner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/snacksText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/snacks"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>