<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30000000"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30000000"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupBtn"
        android:layout_below="@id/password"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>