<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            android:layout_margin="30dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/addFoodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/addFood"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/selectMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addFoodText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:dropDownWidth="fill_parent"
            android:hint="@string/selectMeal"
            android:padding="5dp"

            android:spinnerMode="dropdown"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/dynamicLayout"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectMeal"
            android:background="@drawable/rounded_rectangle"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <EditText
                android:id="@+id/searchFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:hint="@string/searchForFood"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/baseline_search_24" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dynamicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout"
            android:orientation="horizontal" />
    </RelativeLayout>
</ScrollView>